--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,4 @@ RewriteEngine On # Turn on the rewriting engine
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+)$ api.php?url=$1 [QSA,L]
+# RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
